@@ -30,9 +30,13 @@ graphTab.title=Graphs
 graphTab.tip=Test activity graphs
 graphTab.image=graphs.gif
 
-tableTab.title=Table
-tableTab.tip=Test statistics summary table
-tableTab.image=summary.gif
+cumulativeTableTab.title=Results
+cumulativeTableTab.tip=Statistics accumulated during collection period
+cumulativeTableTab.image=summary.gif
+
+sampleTableTab.title=Sample
+sampleTableTab.tip=Statistics recorded in last sample interval
+sampleTableTab.image=summary.gif
 
 error.unit=error
 error.units=errors
@@ -63,7 +67,7 @@ table.descriptionColumn.label=Description
 table.transactionColumn.label=Sucessful transactions
 table.errorColumn.label=Errors
 table.averageTimeColumn.label=Average time
-table.averageTPSColumn.label=Average TPS
+table.tpsColumn.label=TPS
 table.peakTPSColumn.label=Peak TPS
 table.test.label=Test
 table.total.label=Total
@@ -88,19 +92,19 @@ unexpectedError.title=Unexpected Error
 # Actions
 #
 
-save.label=Save statistics
-save.tip=Save statistics
+save.label=Save results
+save.tip=Save results
 save.image=save.gif
 
 exit.label=Exit
 exit.image=exit.gif
 
-start.label=Capture statistics
-start.tip=Capture statistics
+start.label=Collect statistics
+start.tip=Start collecting statistics
 start.image=start.gif
 
-stop.label=Stop capture
-stop.tip=Stop capturing statistics
+stop.label=Stop collection
+stop.tip=Stop collecting statistics
 stop.image=stop.gif
 
 start-processes.label=Start processes
