@@ -6,6 +6,7 @@ Grinder 2.7
    - Highlight errors labels if errors > 0.
    - Table view now has average TPS and peak TPS.
    - Removed individual sample TPS labels.
+   - New last sample statistics tab.
 
   Remove distinction between "abortions" and "errors" from the
   recorded statistics. All tests now result in a "successful
